# Embarcados

./: README.md
1_Respostas/: 01_Intro_Sist_Emb.md  02_Intro_Linux_1.md  02_Intro_Linux_2.md  03_GCC.md  04_File_stdio.md  A.txt  Aula 1  bib_arqs.c  bib_arqs.h  makefile  nome_arquivo.txt  num_caracs.c  ola.txt  out  q.c
2_PCs/: PC1 - Embarcados.md  README.md
3_Trabalho/: Embarcados - Linha do Tempo.xlsx  Embarcados - Quadro de Planejamento.docx  README.md
3_Trabalho/Code/: Install_Code.sh  README.md  buzzer.c  buzzer.h  buzzer.hpp  gps_example_code.cpp  implementacaoGPS.cpp  implementacaoGPS.h  implementacaoGPS.hpp  implementacaoIMU.c  implementacaoIMU.cpp  implementacaoIMU.h  implementacaoIMU.hpp  main.c  main.cpp  makefile  threadProcessamento.cpp  threadProcessamento.h
3_Trabalho/Code/Linux/RTIMULibCal/Output/: RTIMULibCal
3_Trabalho/Code/Resultados/: da  dados_01:34:08.txt  dados_04:09:06.txt  dados_10:48:22.txt  dados_11:59:54.txt  dados_12:06:15.txt
3_Trabalho/Code/finalPROG/: main.cpp  makefile
3_Trabalho/Code/finalPROG/LIBS/BUZZERLib/: buzzer.cpp
3_Trabalho/Code/finalPROG/LIBS/GPSLib/: implementacaoGPS.cpp
3_Trabalho/Code/finalPROG/Output/: finalPROG
3_Trabalho/Code/testeFFT/: fft-test.cpp  fft.c  fft.h  makefile
3_Trabalho/Code/testeGPS/: aout  implementacaoGPS.cpp  implementacaoGPS.h  makefile  testeGPS.cpp
3_Trabalho/Code/testeIMU/: CMakeLists.txt  buzteste.c  implementacaoIMU.cpp  implementacaoIMU.h  makefile  testeIMU.cpp
3_Trabalho/Code/testeIMU/Output/: testeIMU
3_Trabalho/Code/testeIMU/RTIMULib/: CMakeLists.txt  MPU9250_2.ini  buzzer.cpp  buzzer.h  implementacaoIMU.cpp  implementacaoIMU.h
3_Trabalho/Code/testeIMU/initFiles/: initFiles.md
3_Trabalho/Code/testeIMU/testeIMU/: testeIMU.cpp
3_Trabalho/Resources/: Relatorio_-_BOM_-_Tab_BOM.tgn  bom.html  bom.tgn  dialogico.drawio  fluxogramaGPS.drawio  fluxogramaIMU.drawio  mpu9250ERRO.txt  schematic.fzz  tfDir.txt  tfEsq.txt
3_Trabalho/TESTE/: aout  bout  gps_example_code.c  implementacaoGPS.cpp  implementacaoGPS.h  makefile  read  testeGPS.cpp  testeGPS2.cpp
3_Trabalho/Testes/GPS/: makefile
3_Trabalho/Testes/IMU/: implementacaoIMU.cpp
(+13 files in other folders)
